--- a/gb/17/2/10/n8795390.md
+++ b/gb/17/2/10/n8795390.md
@@ -1,56 +1,43 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>暴雨导致山崩  峇里岛12死</h2>
-
 <h6></h6>
 <hr>
-	<p>【大纪元2017年02月10日讯】官员今天表示，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BA%A6%E5%81%87%E5%9C%A3%E5%9C%B0.md#1">度假圣地</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B3%87%E9%87%8C%E5%B2%9B.md#1">峇里岛</a>，有包括3名孩童在内的12名印尼民众，死于吞没数个村落的暴雨所引起的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%B1%E5%B4%A9.md#1">山崩</a>。</p>
-<p>这起<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B1%B1%E5%B4%A9.md#1">山崩</a>发生于昨夜到今天凌晨，地点位于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B3%87%E9%87%8C%E5%B2%9B.md#1">峇里岛</a>中部的金塔马尼（Kintamani）区；山崩另造成数栋房屋被毁与遭掩没。</p>
+	<p>【大纪元2017年02月10日讯】官员今天表示，度假圣地峇里岛，有包括3名孩童在内的12名印尼民众，死于吞没数个村落的暴雨所引起的山崩。</p>
+<p>这起山崩发生于昨夜到今天凌晨，地点位于峇里岛中部的金塔马尼（Kintamani）区；山崩另造成数栋房屋被毁与遭掩没。</p>
 <p>灾防署发言人苏托波（Sutopo Purwo Nugroho）说：“极端的暴雨昨日下了一整天，导致3个村落发生山崩，已造成12人死亡。”</p>
 <p>死于其中2座村庄的3名孩童分别年仅10岁、7岁与1岁，另有5人受伤，其中3人伤势严重。</p>
 <p>地方灾防官员表示，村落的居民事先已撤离遭暴雨侵袭的地区，这些地区离观光圣地的峇里岛南部海岸相当远，据信没有人员失踪。</p>
 <p>山崩与洪水在印尼群岛很常见，尤其是在长达数月、在1月与2月达高峰的雨季。（转自中央社）</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/6/20/n2564210.md#1">为什么古代称皇帝死叫做“驾崩”？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/7/n4475271.md#1">全球最昂贵的8条街道 香港山顶道居首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/8/n4475814.md#1">峇里岛垃圾成灾  澳游客是祸首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/20/n4621519.md#1">峇里岛陷恐攻危机 台外交部吁检讨前往</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/6/20/n2564210.md#1">为什么古代称皇帝死叫做“驾崩”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/7/n4475271.md#1">全球最昂贵的8条街道 香港山顶道居首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/8/n4475814.md#1">峇里岛垃圾成灾  澳游客是祸首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/20/n4621519.md#1">峇里岛陷恐攻危机 台外交部吁检讨前往</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/27/n2977832.md#1" target="_blank">鲜为人知的马克思之七：渎神的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/5/n11769925.md#1" target="_blank">见证大法超常 屏东法轮功学员在法中熔炼</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/14/n11939875.md#1" target="_blank">“红色殿堂”里的刀光剑影</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/2/n7794877.md#1" target="_blank">矿难幸存者神奇扔掉双拐重新站起</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066098.md#1">奥地利女子转生为邻居的儿子 过世前就预告</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/3/n14066374.md#1">【未解之谜】深度解读《黄檗禅师诗》（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/2/n14065739.md#1">做好事遭污名他却不辩解  到底是为了什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067434.md#1">【杨延昭传奇】乱世中的命定姻缘（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069176.md#1">【未解之谜】2025年大巨变？深度解读《黄檗禅师诗》（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070502.md#1">【菁英论坛】习受责难？胡锦涛生死之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070292.md#1">【全球新闻】华为手机或盗用韩国芯片 美国启动调查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069982.md#1">【秦鹏观察】甩锅李强安军方 习整火箭军内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069262.md#1">深圳马路成“海”地铁站被淹 泄洪祸及香港</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069431.md#1">【翻墙必看】分析：习背两大黑锅 面临危局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069870.md#1">中国歌手在俄占区唱《喀秋莎》 乌方要中共解释</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069882.md#1">周杰伦天津开唱发生意外 困于旋转球呕吐摔伤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068384.md#1">何炅遭实名举报拖欠保姆工资 爆料人删除动态</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069102.md#1">挺李玟后消失多日 王泽鹏解约《好声音》公司</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14069171.md#1">胡歌宣传新片谈过世母亲：仍会给她发微信</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069974.md#1">带吸氧装置西安开唱 五月天阿信憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068425.md#1">日本名医自创“断糖饮食法” 3个月减34斤</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068733.md#1">美国医生示警 这是会加速老化的头号原因</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061655.md#1">为何养成这8个生活习惯能帮你延寿几十年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067514.md#1">蒲公英8大好处 利尿减肥还降血压 当心2禁忌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气养生小心哪些禁忌？“补露”怎么补？</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/10/n8795390.htm">暴雨导致山崩  峇里岛12死</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/17/2/10/n8795390.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410373.md#1">第五面墙：三位意大利天顶壁画家的杰作欣赏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418423.md#1">【舞蹈】飞天艺术学院2024第二学期舞蹈考试（高班 女生）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416537.md#1">【净园财经】阿根廷奇迹 中国的米莱在哪里？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416610.md#1">【菁英论坛】TikTok生死时刻 中美数字战开打</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416239.md#1">川普就职前和习通话释何信号 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410842.md#1">人偏肺病毒感染高发 病毒专家教你怎样应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/10/n8795390.htm">暴雨导致山崩  峇里岛12死</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/17/2/10/n8795390.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
